# Memora

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json
.claude/: settings.json  settings.local.json
.claude/memory/: MEMORY.md  architecture-decisions.md  development-status.md  project-overview.md  user-preferences.md
.github/workflows/: release.yml
Guidance/: CHANGELOG.md  PROGRESS.md  RELEASE-DISTRIBUTION.md  UI-REDESIGN-GUARDRAILS.md  architecture.md  bug-log.md  bug-log_archived.md  pattern-library.md  pattern-library_archived.md  project-log.md  project-log_archived.md  status.md  summary.md
Guidance/architecture/: changelog.md  overview.md
Guidance/knowledge/: E-016.md  E-017.md  E-018.md  E-021.md  E-022.md  E-023.md  E-024.md  E-025.md  E-027.md  E-029.md  P-005.md  P-006.md  P-007.md  P-008.md  P-009.md  P-010.md  P-011.md  P-012.md  P-013.md  R-001.md  index.md
Guidance/logs/: 2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-06-03.md  2026-06-04.md  index.md
app/web/: .env.tauri  index.html  package-lock.json  package.json  (+1 more)
demo/: README.md  package-lock.json  package.json  test-pipeline.js
docs/: PRD-v1.md  PRD-v2.md  chat-capture-research.md  inspire.md  inspire_result.md  product-requirements.md  topic-split-test-conversations.md  产品总结.md
extension/: background.js  content.js  popup.js
scripts/: README.md  analyze-svg-bbox.cjs  chatgpt-console-capture.js  claudecode-console-capture.js  convert-icon.cjs  deepseek-console-capture.js  doubao-console-capture.js  gemini-console-capture.js  kimi-console-capture.js  kimi_result.txt  minimax-console-capture.js  qwen-console-capture.js  shared-console-capture-core.js  yuanbao-console-capture.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: schema.sql
src-tauri/icons/: icon.icns
src-tauri/prompts/interactive-companion/: prompt.md
src-tauri/prompts/planning-decision/: prompt.md
src-tauri/prompts/text-processing/: prompt.md
src-tauri/src/: main.rs
(+39 files in other folders)
